# Qonnectra

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Qonnectra.code-workspace  README.md  SECURITY.md  hello.py  package-lock.json  package.json  publiccode.yml  pyproject.toml  pytest.ini  release-please-config.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/apps/api/: admin.py  apps.py  handlers.py  middleware.py  models.py  pageination.py  permissions.py  qgis_validators.py  routing.py  search.py  serializers.py  services.py  signals.py  storage.py  urls.py  validators.py  views.py  wms_service.py
backend/apps/api/fixtures/: attributes_area_types.json  attributes_cable_type.json  attributes_company.json  attributes_component_structure.json  attributes_component_type.json  attributes_conduit_type.json  attributes_construction_type.json  attributes_fiber_color.json  attributes_fiber_status.json  attributes_microduct_color.json  attributes_microduct_status.json  attributes_network_level.json  attributes_node_type.json  attributes_phase.json  attributes_residential_unit_status.json  attributes_residential_unit_type.json  attributes_status.json  attributes_status_development.json  attributes_surface.json  cable_type_color_mapping.json  conduit_type_color_mapping.json  container_types.json  file_type_categories.json  flags.json  gt_pk_metadata.json  network_schema_settings.json  pipe_branch_settings.json  projects.json  request_reasons.json  storage_preference.json  type_of_work.json  valuation_cost_rates.json
backend/apps/api/migrations/: 0001_initial.py  0002_attributesstatus_and_more.py  0002_routines.py  0003_attributescompany_attributesnodetype_attributesphase.py  0003_ddl.py  0003_trench_ddl.py  0004_alter_trench_company_alter_trench_construction_type_and_more.py  0004_trench_views.py  0004_views.py  0009_ol_area_view.py  (+109 more)
backend/core/: settings.py  urls.py
backend/templates/admin/: base_site.html
(+490 files in other folders)
