[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==4.2.17",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-gis>=1.1",
    "docutils>=0.21.2",
    "psycopg[binary]>=3.2.4",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
