[project]
name = "backend"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django==4.2.17",
    "django-cors-headers>=4.6.0",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-gis>=1.1",
    "djangorestframework-simplejwt>=5.5.0",
    "docutils>=0.21.2",
    "geopandas>=1.1.0",
    "gunicorn>=23.0.0",
    "networkx>=3.4.2",
    "psycopg[binary]>=3.2.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
