[project]
name = "backend"
version = "0.6.6"
description = "Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django==4.2.17",
    "django-cors-headers>=4.6.0",
    "django-cors-headers>=4.6.0",
    "django-json-widget>=2.0.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-gis>=1.1",
    "djangorestframework-simplejwt>=5.5.0",
    "docutils>=0.21.2",
    "geopandas>=1.1.0",
    "gunicorn>=23.0.0",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pathvalidate>=3.3.1",
    "psycopg[binary]>=3.2.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "ruff>=0.11.4",
]
